--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
-    "build": "tsc && vite build --base=/react-ts-pokemon/",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
